--- a/0.local/req-test.yaml
+++ b/0.local/req-test.yaml
@@ -19,7 +19,7 @@ requests:
   #       GET /HTTP/1.1
   #       Host: 127.0.0.1:8000
   #       Content-Type: application/json
-  #       {{domain}} 
+  #       {{domain}} 1
         
   - raw:
       - |
