--- a/0.local/api/hunter_api.yaml
+++ b/0.local/api/hunter_api.yaml
@@ -37,7 +37,7 @@ requests:
           - '"code":200'
 
     payloads:
-      hunter_token: helpers/api/hunter_token.txt
+      hunter_token: 0.local/helpers/api/hunter_token.txt
     attack: clusterbomb
 
 
