--- a/0.local/loginpanel/fuzzing-loginpage-weak-password-form-login-username-password.yaml
+++ b/0.local/loginpanel/fuzzing-loginpage-weak-password-form-login-username-password.yaml
@@ -19,7 +19,7 @@ requests:
       username:
         - admin
 
-      password: "helpers/wordlists/password-TOP250"
+      password: "0.local/helpers/wordlists/password-TOP250"
 
 
     attack: clusterbomb
