--- a/0.local/api/cert/api-getcertip-fofa.yaml
+++ b/0.local/api/cert/api-getcertip-fofa.yaml
@@ -21,8 +21,8 @@ requests:
           - 200
 
     payloads:
-      fofa_email: helpers/api/fofa_mail.txt
-      fofa_token: helpers/api/fofa_token.txt
+      fofa_email: 0.local/helpers/api/fofa_mail.txt
+      fofa_token: 0.local/helpers/api/fofa_token.txt
     attack: clusterbomb
 
 
