--- a/0.local/api/subdomain/api-subdomain-shodan.yaml
+++ b/0.local/api/subdomain/api-subdomain-shodan.yaml
@@ -20,7 +20,7 @@ requests:
           - 200
 
     payloads:
-      shodan_token: helpers/api/shodan_token.txt
+      shodan_token: 0.local/helpers/api/shodan_token.txt
     attack: clusterbomb
 
 
