--- a/0.local/fuzz/fuzz-login-LauEl.yaml
+++ b/0.local/fuzz/fuzz-login-LauEl.yaml
@@ -23,7 +23,7 @@ requests:
         Accept-Language: zh-CN,zh;q=0.9
     body: "User%5Buser_name%5D={{username}}&User%5Bpassword%5D={{password}}"
     payloads:
-      password: "helpers/wordlists/pass_all.txt"
+      password: "0.local/helpers/wordlists/pass_all.txt"
       username:
         - admin
     
