--- a/0.local/fuzz/fuzz-login-weaver-emobile-v7.yaml
+++ b/0.local/fuzz/fuzz-login-weaver-emobile-v7.yaml
@@ -21,7 +21,7 @@ requests:
     payloads:
       username:
         - sysadmin
-      password: "helpers/wordlists/password-TOP250"
+      password: "0.local/helpers/wordlists/password-TOP250"
     
     attack: clusterbomb
     stop-at-first-match: true
