--- a/0.local/fuzz/jenkins-login-fuzz.yaml
+++ b/0.local/fuzz/jenkins-login-fuzz.yaml
@@ -29,7 +29,7 @@ requests:
     attack: clusterbomb
     stop-at-first-match: true
     payloads:
-      password: "helpers/wordlists/password-TOP250"
+      password: "0.local/helpers/wordlists/password-TOP250"
     matchers-condition: and
     matchers:
       - type: word
