--- a/0.local/login/default/login-default-LauEl.yaml
+++ b/0.local/login/default/login-default-LauEl.yaml
@@ -1,4 +1,4 @@
-id: LauEl-defalt-login
+id: login-default-LauEl
 
 info:
   name: 萤火商城-LauEl-后台默认登录
@@ -23,7 +23,8 @@ requests:
         Accept-Language: zh-CN,zh;q=0.9
     body: "User%5Buser_name%5D={{username}}&User%5Bpassword%5D={{password}}"
     payloads:
-      password: "0.local/helpers/wordlists/LauEl-yinghuo.txt"
+      password: 
+        - yinghuo
       username:
         - admin
     
