增加404页面扫描

--- a/0.local/scan/finger-scan.yaml
+++ b/0.local/scan/finger-scan.yaml
@@ -13891,6 +13891,7 @@ workflows:
       subtemplates:        
         - template: exposures/
         - template: exposed-panels/
+        - template: misconfiguration/
 
 
 ############################ 403状态码匹配扫描 -  开始 #################################################################################
