--- a/0.local/scan/scan-first-request.yaml
+++ b/0.local/scan/scan-first-request.yaml
@@ -34,6 +34,30 @@ requests:
         condition: or
 
       - type: status
+        name: 200
+        status:
+          - 200
+        condition: and
+
+      - type: status
+        name: 301
+        status:
+          - 301
+        condition: and
+
+      - type: status
+        name: 302
+        status:
+          - 302
+        condition: and
+
+      - type: status
+        name: 401
+        status:
+          - 401
+        condition: and
+
+      - type: status
         name: 403
         status:
           - 403
