--- a/0.local/login/fuzz/login-fuzz-shopxo.yaml
+++ b/0.local/login/fuzz/login-fuzz-shopxo.yaml
@@ -37,7 +37,7 @@ requests:
     payloads:
       username: 
         - admin
-      password: "0.local/helpers/wordlists/password-TOP250"
+      password: "0.local/helpers/wordlists/password-TOP250.txt"
 
     threads: 5
 
