--- a/0.local/login/fuzz/login-fuzz-zktime.yaml
+++ b/0.local/login/fuzz/login-fuzz-zktime.yaml
@@ -26,7 +26,7 @@ requests:
     payloads:
       username:
         - admin
-      password: "0.local/helpers/wordlists/password-TOP250"
+      password: "0.local/helpers/wordlists/password-TOP250.txt"
 
     matchers-condition: and
     matchers:
