--- a/0.local/login/fuzz/oa/login-fuzz-oa-weaver-emobile-v7.yaml
+++ b/0.local/login/fuzz/oa/login-fuzz-oa-weaver-emobile-v7.yaml
@@ -21,7 +21,7 @@ requests:
     payloads:
       username:
         - sysadmin
-      password: "0.local/helpers/wordlists/password-TOP250"
+      password: "0.local/helpers/wordlists/password-TOP250.txt"
     
     attack: clusterbomb
     stop-at-first-match: true
