--- a/0.local/login/fuzz/login-fuzz-shiziyu-cms.yaml
+++ b/0.local/login/fuzz/login-fuzz-shiziyu-cms.yaml
@@ -23,7 +23,7 @@ requests:
 
     attack: clusterbomb
     payloads:
-      password: "0.local/helpers/wordlists/password-TOP250"
+      password: "0.local/helpers/wordlists/password-TOP250.txt"
 
     threads: 5
 
